--- a/src/pages/projects.module.css
+++ b/src/pages/projects.module.css
@@ -66,16 +66,13 @@
 
 @media only screen and (min-width: 900px) {
     .project {
-        display: flex;
-        gap: 64px;
+        display: grid;
+        grid-gap: 64px;
+        grid-template-columns: 1fr 1fr;
     }
 
     .project:last-child {
         margin: 32px 0 64px 0;
-    }
-
-    .txtCol, .imgCol {
-        width: 50%;
     }
 
     .project h2 {
